Prevent deadlocks by reading input before waiting.